update Gradle and libraries; fix some deprecation message
Additionally adds the (needed) updates done to the original repository
as well.